@@ -1,5 +1,7 @@
 2002-01-22  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* docs/idebug.html: added note about ? help at debug prompt.
+
 	* tkcon.tcl (dir): prevented possible 'divide by zero' error.
 	[Bug #496584]
 	(Expand*): fixed ExpandPathname to better handle spaced pathnames.
